--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
                 <i class="fas fa-home"></i>
                 <span>Beranda</span>
             </a>
-            <a href="#" class="nav-item">
-                <i class="fas fa-history"></i>
-                <span>Riwayat</span>
+            <a href="#" class="nav-item pulsa-data">
+                <i class="fas fa-mobile-alt"></i>
+                <span>Pulsa & Data</span>
             </a>
-            <a href="#" class="nav-item">
-                <i class="fas fa-user-circle"></i>
-                <span>Akun</span>
+            <a href="#" class="nav-item panel-pterodactyl">
+                <i class="fas fa-server"></i>
+                <span>Panel Pterodactyl</span>
             </a>
         </nav>
     </footer>
@@ -57,6 +57,7 @@
             renderGameCards(GAMES, 'popular-games');
             renderBanners();
             startBannerSlider();
+            setupFooterFunctionality();
         });
     </script>
 </body>
