--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
 
     <footer class="footer">
         <nav class="nav-links">
-            <a href="#" class="nav-item active">
+            <a href="index.html" class="nav-item active">
                 <i class="fas fa-home"></i>
                 <span>Beranda</span>
             </a>
-            <a href="#" class="nav-item pulsa-data">
+            <a href="pulsa.html" class="nav-item">
                 <i class="fas fa-mobile-alt"></i>
                 <span>Pulsa & Data</span>
             </a>
-            <a href="#" class="nav-item panel-pterodactyl">
+            <a href="pterodactyl.html" class="nav-item">
                 <i class="fas fa-server"></i>
                 <span>Panel Pterodactyl</span>
             </a>
@@ -57,7 +57,6 @@
             renderGameCards(GAMES, 'popular-games');
             renderBanners();
             startBannerSlider();
-            setupFooterFunctionality();
         });
     </script>
 </body>
