--- a/pterodactyl.html
+++ b/pterodactyl.html
@@ -49,7 +49,7 @@
                 <span class="total-price">Rp 0</span>
             </div>
             <div class="cart-actions">
-                <button id="cart-checkout-btn" class="action-button" disabled>Beli Sekarang</button>
+                <button id="cart-checkout-btn" class="action-button">Beli Sekarang</button>
             </div>
         </div>
     </div>
@@ -75,9 +75,17 @@
     
     <script>
         const PTERODACTYL_PRODUCTS = [
-            { id: "pter-basic", label: "Panel Basic 1GB RAM", price: 15000 },
-            { id: "pter-standar", label: "Panel Standar 2GB RAM", price: 25000 },
-            { id: "pter-pro", label: "Panel Pro 4GB RAM", price: 45000 },
+            { id: "pter-1gb", label: "Panel Basic 1GB RAM", price: 1000 },
+            { id: "pter-2gb", label: "Panel Standar 2GB RAM", price: 2000 },
+            { id: "pter-3gb", label: "Panel Pro 3GB RAM", price: 3000 },
+            { id: "pter-4gb", label: "Panel Pro 4GB RAM", price: 4000 },
+            { id: "pter-5gb", label: "Panel Pro 5GB RAM", price: 5000 },
+            { id: "pter-6gb", label: "Panel Pro 6GB RAM", price: 6000 },
+            { id: "pter-7gb", label: "Panel Pro 7GB RAM", price: 7000 },
+            { id: "pter-8gb", label: "Panel Pro 8GB RAM", price: 8000 },
+            { id: "pter-9gb", label: "Panel Pro 9GB RAM", price: 9000 },
+            { id: "pter-10gb", label: "Panel Pro 10GB RAM", price: 10000 },
+            { id: "pter-unlimited", label: "Panel Unlimited", price: 12000 },
         ];
     </script>
     <script src="script.js"></script>
