--- a/pterodactyl.html
+++ b/pterodactyl.html
@@ -27,7 +27,7 @@
         </div>
     </main>
 
-    <button id="floating-cart-button" class="floating-cart-button" style="display: flex;">
+    <button id="floating-cart-button" class="floating-cart-button">
         <i class="fas fa-shopping-cart"></i>
         <span class="cart-count">0</span>
     </button>
@@ -62,28 +62,13 @@
             </a>
             <a href="pterodactyl.html" class="nav-item active">
                 <i class="fas fa-server"></i>
-                <span>Panel Pterodactyl</span>
+                <span>Panel</span>
             </a>
         </nav>
     </footer>
     
     <div class="notification-container"></div>
     
-    <script>
-        const PTERODACTYL_PRODUCTS = [
-            { id: "pter-1gb", label: "Panel Basic 1GB RAM", price: 1000 },
-            { id: "pter-2gb", label: "Panel Standar 2GB RAM", price: 2000 },
-            { id: "pter-3gb", label: "Panel Pro 3GB RAM", price: 3000 },
-            { id: "pter-4gb", label: "Panel Pro 4GB RAM", price: 4000 },
-            { id: "pter-5gb", label: "Panel Pro 5GB RAM", price: 5000 },
-            { id: "pter-6gb", label: "Panel Pro 6GB RAM", price: 6000 },
-            { id: "pter-7gb", label: "Panel Pro 7GB RAM", price: 7000 },
-            { id: "pter-8gb", label: "Panel Pro 8GB RAM", price: 8000 },
-            { id: "pter-9gb", label: "Panel Pro 9GB RAM", price: 9000 },
-            { id: "pter-10gb", label: "Panel Pro 10GB RAM", price: 10000 },
-            { id: "pter-unlimited", label: "Panel Unlimited", price: 12000 },
-        ];
-    </script>
     <script src="script.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
