--- a/index.html
+++ b/index.html
@@ -3,85 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Walzshop | Top Up Game Murah & Cepat</title>
+    <title>WALZSHOP - Top Up Games</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 
-    <header class="header">
-        <div class="header-center">
-            <h1>Walzshop</h1>
-        </div>
-        <a href="search.html" class="header-link search-icon"><i class="fas fa-search"></i></a>
-    </header>
-
-    <main class="main-content container">
-        <div class="banner-slider">
-            <div class="slides" id="banner-container">
-                </div>
-            <div class="dots-container" id="banner-dots"></div>
-        </div>
-
-        <div class="page-section">
-            <div class="section-header">
-                <h2>Paling Banyak Dicari</h2>
+    <div class="main-container">
+        <header class="header">
+            <a href="index.html" class="logo-link">
+                <img src="https://files.catbox.moe/hrtpys.jpg" alt="WALZSHOP Icon" class="logo-icon">
+                <h1 class="website-name">WALZSHOP</h1>
+            </a>
+            <div class="header-right">
+                <a href="search.html" class="header-link">
+                    <i class="fas fa-search"></i>
+                </a>
+                <a href="profile.html" class="header-link">
+                    <i class="fas fa-user"></i>
+                </a>
             </div>
-            <div class="game-grid" id="popular-games">
-                </div>
-        </div>
-    </main>
+        </header>
 
-    <button id="floating-cart-button" class="floating-cart-button">
-        <i class="fas fa-shopping-cart"></i>
-        <span class="cart-count">0</span>
-    </button>
-
-    <div id="cart-popup" class="cart-popup">
-        <div class="cart-popup-content">
-            <div class="cart-popup-header">
-                <h3>Keranjang Belanja</h3>
-                <button class="close-popup-btn"><i class="fas fa-times"></i></button>
-            </div>
-            <ul id="cart-items-list" class="cart-items-list">
-                </ul>
-            <div id="cart-total" class="cart-total">
-                <span class="total-label">Total:</span>
-                <span class="total-price">Rp 0</span>
-            </div>
-            <div class="cart-actions">
-                <button id="cart-checkout-btn" class="action-button" disabled>Beli Sekarang</button>
-            </div>
-        </div>
+        <main class="game-selection-main">
+            <h2 class="section-title">Pilih Game Favoritmu</h2>
+            <section class="game-list-section">
+                <div id="game-list" class="game-grid-custom">
+                    </div>
+            </section>
+        </main>
     </div>
 
     <footer class="footer">
-        <nav class="nav-links">
-            <a href="index.html" class="nav-item active">
-                <i class="fas fa-home"></i>
-                <span>Beranda</span>
-            </a>
-            <a href="pulsa.html" class="nav-item">
-                <i class="fas fa-mobile-alt"></i>
-                <span>Pulsa & Data</span>
-            </a>
-            <a href="pterodactyl.html" class="nav-item">
-                <i class="fas fa-server"></i>
-                <span>Panel Pterodactyl</span>
-            </a>
-        </nav>
+        <div class="footer-socials">
+            <a href="https://www.facebook.com" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://t.me/walzshopid" target="_blank" aria-label="Telegram"><i class="fab fa-telegram-plane"></i></a>
+        </div>
+        <ul class="footer-links">
+            <li><a href="#">Tentang Kami</a></li>
+            <li><a href="#">Kebijakan Privasi</a></li>
+            <li><a href="#">Syarat & Ketentuan</a></li>
+        </ul>
+        <p>&copy; 2024 WALZSHOP. All rights reserved.</p>
     </footer>
 
-    <div class="notification-container"></div>
     <script src="script.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            renderGameCards(GAMES, 'popular-games');
-            renderBanners();
-            startBannerSlider();
-            setupFloatingCart();
-        });
-    </script>
 </body>
 </html>
