--- a/index.html
+++ b/index.html
@@ -3,63 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WALZSHOP - Top Up Games Cepat & Terpercaya</title>
+    <title>WALZSHOP - Top Up Cepat & Terpercaya</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <style>
-        .search-box {
-            position: relative;
-            margin-bottom: 25px;
-            margin-top: 20px;
-        }
-        #game-search-input {
-            width: 100%;
-            padding: 16px 20px 16px 50px;
-            font-size: 1em;
-            background-color: var(--purple-mid);
-            border: 2px solid var(--card-bg);
-            border-radius: 15px;
-            color: var(--text-color);
-            transition: all var(--transition-speed);
-        }
-        #game-search-input:focus {
-            outline: none;
-            border-color: var(--selected-border);
-            box-shadow: 0 0 15px var(--glow-color);
-        }
-        .search-box .search-icon {
-            position: absolute;
-            left: 18px;
-            top: 50%;
-            transform: translateY(-50%);
-            font-size: 1.2em;
-            color: var(--text-light);
-        }
-        #no-results-message {
-            text-align: center;
-            color: var(--text-light);
-            display: none;
-            padding: 40px 0;
-            font-size: 1.1em;
-        }
-        .bottom-nav {
-            position: fixed; bottom: 0; left: 0; width: 100%;
-            background-color: var(--purple-mid); display: flex;
-            justify-content: space-around; align-items: center; padding: 10px 0;
-            box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.3); z-index: 1001;
-            border-top: 1px solid var(--card-bg);
-        }
-        .bottom-nav-link {
-            display: flex; flex-direction: column; align-items: center;
-            color: var(--text-light); font-size: 0.75em;
-            transition: all var(--transition-speed); flex-grow: 1; text-align: center;
-        }
-        .bottom-nav-link i { font-size: 1.5em; margin-bottom: 4px; }
-        .bottom-nav-link:hover, .bottom-nav-link.active {
-            color: var(--accent-color); transform: translateY(-3px);
-        }
-        body { padding-bottom: 70px; }
-    </style>
 </head>
 <body>
     <div class="main-container">
@@ -68,23 +14,19 @@
                 <img src="https://files.catbox.moe/hrtpys.jpg" alt="WALZSHOP Icon" class="logo-icon">
                 <h1 class="website-name">WALZSHOP</h1>
             </a>
-            <div class="header-right">
-                <a href="#" class="header-link"><i class="fas fa-user"></i></a>
-            </div>
+            <a href="#" class="header-link"><i class="fas fa-user-circle"></i></a>
         </header>
 
-        <main class="game-selection-main">
-            <div class="search-box">
+        <main>
+            <div class="search-box" style="margin-top: 20px;">
                 <i class="fas fa-search search-icon"></i>
-                <input type="text" id="game-search-input" placeholder="Cari game favoritmu...">
+                <input type="text" id="game-search-input" class="search-input" placeholder="Cari game favoritmu...">
             </div>
 
             <h2 class="section-title">Populer</h2>
-            <section class="game-list-section">
-                <div id="game-list" class="game-grid-custom">
-                    </div>
-                <p id="no-results-message">Game tidak ditemukan.</p>
-            </section>
+            <div id="game-list" class="game-grid">
+                </div>
+            <p id="no-results-message" style="display: none; text-align: center; margin-top: 2rem;">Game tidak ditemukan.</p>
         </main>
     </div>
 
