--- a/cart.html
+++ b/cart.html
@@ -11,21 +11,22 @@
     <div class="notification-container"></div>
     <div class="main-container">
         <header class="header">
-            <a href="index.html" class="logo-link">
+             <a href="index.html" class="logo-link">
                 <img src="https://files.catbox.moe/hrtpys.jpg" alt="WALZSHOP Icon" class="logo-icon">
                 <h1 class="website-name">WALZSHOP</h1>
             </a>
+            <a href="#" class="header-link"><i class="fas fa-user-circle"></i></a>
         </header>
 
-        <div class="cart-page-container">
-            <div id="cart-summary-card" class="cart-summary-card">
+        <main style="margin-top: 20px;">
+            <div id="cart-summary-card" class="cart-summary">
                 </div>
 
-            <div id="payment-info-section" class="payment-info-section">
+            <div id="payment-info-section" class="payment-details">
                 </div>
 
-            <button id="pay-button" class="confirm-button">Konfirmasi Pembayaran via WhatsApp</button>
-        </div>
+            <button id="pay-button" class="action-button" style="margin-top: 1.5rem;">Konfirmasi Pembayaran via WhatsApp</button>
+        </main>
     </div>
     <script src="script.js"></script>
 </body>
