--- a/index.html
+++ b/index.html
@@ -3,38 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WALZSHOP - Top Up Cepat & Terpercaya</title>
+    <title>WALZSHOP - Top Up Games</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
+
     <div class="main-container">
         <header class="header">
             <a href="index.html" class="logo-link">
                 <img src="https://files.catbox.moe/hrtpys.jpg" alt="WALZSHOP Icon" class="logo-icon">
                 <h1 class="website-name">WALZSHOP</h1>
             </a>
-            <a href="#" class="header-link"><i class="fas fa-user-circle"></i></a>
+            <div class="header-right">
+                <a href="#" class="header-link">
+                    <i class="fas fa-search"></i>
+                </a>
+                <a href="#" class="header-link">
+                    <i class="fas fa-user"></i>
+                </a>
+            </div>
         </header>
 
-        <main>
-            <div class="search-box" style="margin-top: 20px;">
-                <i class="fas fa-search search-icon"></i>
-                <input type="text" id="game-search-input" class="search-input" placeholder="Cari game favoritmu...">
-            </div>
-
-            <h2 class="section-title">Populer</h2>
-            <div id="game-list" class="game-grid">
+        <main class="game-selection-main">
+            <section class="section-card featured-section">
+                <div class="section-header">
+                    <h2 class="section-title">Pilih Game Favoritmu</h2>
                 </div>
-            <p id="no-results-message" style="display: none; text-align: center; margin-top: 2rem;">Game tidak ditemukan.</p>
+                <div id="game-list" class="game-grid-custom">
+                    </div>
+            </section>
         </main>
     </div>
 
-    <nav class="bottom-nav">
-        <a href="index.html" class="bottom-nav-link active"><i class="fas fa-gamepad"></i><span>Top Up</span></a>
-        <a href="pulsa.html" class="bottom-nav-link"><i class="fas fa-mobile-alt"></i><span>Pulsa & Data</span></a>
-        <a href="panel.html" class="bottom-nav-link"><i class="fas fa-server"></i><span>Panel</span></a>
-    </nav>
+    <footer class="footer">
+        <div class="footer-socials">
+            <a href="https://www.facebook.com" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://t.me/walzshopid" target="_blank" aria-label="Telegram"><i class="fab fa-telegram-plane"></i></a>
+        </div>
+        <ul class="footer-links">
+            <li><a href="#">Tentang Kami</a></li>
+            <li><a href="#">Kebijakan Privasi</a></li>
+            <li><a href="#">Syarat & Ketentuan</a></li>
+        </ul>
+        <p>&copy; 2024 WALZSHOP. Hak Cipta Dilindungi.</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
